# sbtc

./: .dockerignore  .env  .gitignore  .screenrc  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.sbtc-signer  Makefile  README.md  RELEASE.md  SECURITY.md  deploy.sh  docker-compose.emily.yml  docker-compose.local.yml  docker-compose.signer.yml  docker-compose.test.yml  flake.nix  nextest.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  setup.sh  signers.sh  tmp
.generated-sources/blocklist-openapi-gen/: Cargo.toml  blocklist-client-openapi.json  build.rs  config.json  package.json
.generated-sources/blocklist-openapi-gen/src/: main.rs
blocklist-client/: Cargo.toml  README.md  build.rs  settings.toml
blocklist-client/src/: client.rs  config.rs  lib.rs  logging.rs  main.rs
blocklist-client/src/api/: handlers.rs  mod.rs  routes.rs
blocklist-client/src/client/: client.rs  mod.rs  risk_client.rs  sanctions.rs
blocklist-client/src/common/: error.rs  mod.rs
blocklist-client/src/config/: default.toml
blocklist-client/src/openapi/: openapi.json  package.json
blocklist-openapi-gen/: Cargo.toml  blocklist-client-openapi.json  build.rs  package.json
common/: Cargo.toml
common/src/: bitcoin.rs  deposits.rs  lib.rs  logging.rs
docker-testing/: Cargo.toml
docker-testing/src/: error.rs  lib.rs  logging.rs
docker-testing/src/images/: bitcoin_core.rs  dynamodb.rs  emily.rs  mod.rs
emily/client-tests/: Cargo.toml  README.md
emily/handler/: Cargo.toml  README.md
emily/handler/src/: config.rs  context.rs  lib.rs  logging.rs  main.rs
emily/lambda/: Cargo.toml  build-lambda.sh
emily/lambda/src/: common.rs  config.rs  errors.rs  eventhandler.rs  lib.rs  main.rs  operations.rs  resources.rs  utils.rs
emily/openapi-gen/: Cargo.toml  build.rs  package.json
emily/openapi-gen/api-config/: private.json  public.json  testing.json
emily/openapi-gen/generated-specs/: private-emily-openapi-spec.json  public-emily-openapi-spec.json  testing-emily-openapi-spec.json
emily/openapi-gen/generators/: mod.rs  private.rs  public.rs  testing.rs
emily/openapi-gen/src/: main.rs
sbtc/: Cargo.toml  README.md
sbtc/proptest-regressions/: leb128.txt
sbtc/src/: deposits.rs  error.rs  events.rs  leb128.rs  lib.rs  logging.rs  rpc.rs  webhooks.rs
sbtc/src/idpack/: mod.rs  segment.rs  segments.rs  tests.rs
sbtc/src/testing/: deposits.rs  mod.rs  regtest.rs
sbtc/tests/integration/: main.rs  rpc.rs  validation.rs
signer/: Cargo.toml  README.md  build.rs
signer/.sqlx/: query-3446a823d60a644dc58bc0c36ba256747ba46b9441072ad8a13c2a6703974a45.json  query-3f0879dab4417cf80f9287fe579c2c6b66f3ac4cc3fe4845ecc4cfe85b4c8e8d.json  query-54884a5f0278765c3d5a3890f9a6cdc60ed352883e037748295d62bcab94ae86.json  query-ac71ab51277e5afa623340de33981eb58d2ae5da602531f49d49c62d711ba6ed.json  query-e4f7cae570f67835407d9a4fddae531b354e355ac374c26b5d2d6fbd9660a2e3.json
signer/examples/: relay-client.rs
signer/migrations/: 0001_create_schema.down.sql  0001_create_schema.sql  0002__create_user.sql  0002_create_user.down.sql  0002_create_user.sql  0002_create_user.up.sql  0003__create_tables.sql  0003_create_tables.down.sql  0003_create_tables.sql  0004__create_functions.sql  0005__create_sighashes_and_withdrawal_outputs_tables.sql  0006__fix_stacks_event_block_hashes.sql  0006__remove_default_user.sql  0006_fix_cde_block_hash.sql  0007__create_bitcoin_blockchain_from.sql  0007__drop_sweep_tables.sql  0008__create_indices_bitcoin_tx_tables.sql  0008__drop_sweep_tables.sql  0011__add_aggregate_key_sighashes_table.sql  0011__add_stacks_blocks_block_height_index.sql  0011__add_stacks_blocks_indexes.sql  0011__add_stacks_related_indexes.sql  0011__materialized_chains.sql  0012__dkg_verification_extensions.sql  0013__consolidate_withdrawal_tables.sql  0014__add_bitcoin_chain_tip_sighashes_table.sql  0014__add_bitcoin_tx_outputs_.sql  0015__drop_transactions_tx_column.sql  0016__drop_bitcoin_withdrawals_outputs_txid.sql
signer/src/: bitcoin.rs  block_notifier.rs  block_observer.rs  blockchain_sync.rs  blocklist_client.rs  codec.rs  config.rs  context.rs  contracts.rs  dkg.rs  ecdsa.rs  emily_client.rs  error.rs  fees.rs  keys.rs  lib.rs  logging.rs  main.rs  message.rs  metrics.rs  network.rs  packaging.rs  request_decider.rs  signature.rs  signatures.rs  stacks_api.rs  storage.rs  testing.rs  transaction_coordinator.rs  transaction_signer.rs  util.rs  utxo.rs  wsts_state_machine.rs  zmq.rs
signer/src/api/: default.rs  info.rs  mod.rs  new_block.rs  router.rs  status.rs
signer/src/bitcoin/: client.rs  error.rs  fees.rs  mod.rs  packaging.rs  rpc.rs  utxo.rs  validation.rs  zmq.rs
signer/src/config/: default.toml  error.rs  mod.rs  serialization.rs  settings.rs
signer/src/context/: messaging.rs  mod.rs  signer_context.rs  signer_state.rs  termination.rs  tests.rs
signer/src/dkg/: mod.rs  testing.rs  verification.rs  wsts.rs
signer/src/message/: testing.rs
signer/src/network/: grpc_relay.rs  in_memory.rs  in_memory2.rs  message.proto  mod.rs  testing.rs
signer/src/proto/: convert.rs  mod.rs
signer/src/stacks/: api.rs  contracts.rs  events.rs  mod.rs  wallet.rs  webhooks.rs
signer/src/storage/: in_memory.rs  mod.rs  model.rs  postgres.rs  sqlx.rs  util.rs
signer/src/testing/: api_clients.rs  block_observer.rs  blocks.rs  btc.rs  context.rs  docker.rs  dummy.rs  message.rs  mod.rs  network.rs  request_decider.rs  stacks.rs  storage.rs  transaction_coordinator.rs  transaction_signer.rs  wallet.rs  wsts.rs
signer/tests/: utxo_construction.rs
signer/tests/bitcoin/: bitcoin.conf
signer/tests/fixtures/: bitcoind-getblockchaininfo-data.json  bitcoind-getnetworkinfo-data.json  complete-deposit-event.json  completed-deposit-event.json  rotate-keys-and-invalid-event.json  rotate-keys-event.json  stacksapi-get-node-info-test-data.json  stacksapi-get-pox-info-test-data.json  stacksapi-v3-sortitions.json  stacksapi-v3-tenures-info-data.json  withdrawal-accept-event.json  withdrawal-create-event.json  withdrawal-reject-event.json
(+976 files in other folders)
