[workspace]
resolver = "2"
members = [
  "signer",
  "emily/handler",
  "emily/openapi-gen",
  "blocklist-client",
  "blocklist-openapi-gen",
  "sbtc",
  ".generated-sources/emily/client/rust/public",
  ".generated-sources/emily/client/rust/private",
  ".generated-sources/emily/client/rust/testing",
  ".generated-sources/blocklist-api"
]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = false
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 16

[workspace.dependencies]
sbtc = { path = "./sbtc" }
emily-handler = { version = "0.1.0", path = "./emily/handler" }
emily-client = { version = "0.1.0", path = "./.generated-sources/emily/client/rust/public" }
testing-emily-client = { version = "0.1.0", path = "./.generated-sources/emily/client/rust/testing" }

aquamarine = { version = "0.5.0", default-features = false }
aws-config = { version = "1.2.0", default-features = false }
aws_lambda_events = { version = "0.15.0", default-features = false }
aws-sdk-dynamodb = { version = "1.36.0", default-features = false }
backoff = { version = "0.4.0", default-features = false, features = ["tokio"] }
base64 = { version = "0.22.1", default-features = false }
bincode = { version = "1.3.3", default-features = false }
bitcoin = { version = "0.32.5", default-features = false, features = ["serde", "rand-std"] }
bitcoincore-rpc = { version = "0.19.0", default-features = false }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }
bitcoincore-zmq = { version = "1.5.2", default-features = false, features = ["async"] }
bitvec = { version = "1.0.1", default-features = false, features = ["serde"] }
clarity = { git = "https://github.com/stacks-network/stacks-core", rev = "49777d3fd73a6dbb610be80c376b7d9389c9871a", default-features = false }
clap = { version = "4.5.4", default-features = false, features = ["derive", "env", "std"] }
config = { version = "0.14.0", default-features = false, features = ["toml"]  }
futures = { version = "0.3.24", default-features = false }
hashbrown = { version = "0.14.5", default-features = false }
http = { version = "1.1.0", default-features = false }
lru = { version = "0.12.5", default-features = false }
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
# This is necessary to compile the AWS Lambda as a lambda.
openssl = { version = "0.10.66", default-features = false, features = ["vendored"] }
p256k1 = { version = "7.2.0", default-features = false }
prost = { version = "0.12.5", default-features = false, features = ["derive"] }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.11.27", default-features = false, features = ["json"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.15", default-features = false }
serde_dynamo = { version = "4.2.14", default-features = false, features = ["aws-sdk-dynamodb+1"] }
serde_json = { version = "1.0.137", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sqlx = { version = "0.8.2", default-features = false, features = [ "postgres", "runtime-tokio", "tls-rustls", "derive", "macros" ] }
stackslib = { git = "https://github.com/stacks-network/stacks-core", rev = "49777d3fd73a6dbb610be80c376b7d9389c9871a", default-features = false }
stacks-common = { git = "https://github.com/stacks-network/stacks-core", rev = "49777d3fd73a6dbb610be80c376b7d9389c9871a", default-features = false }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.69", default-features = false }
time = { version = "0.3.37", default-features = false, features = ["serde"] }
tonic = { version = "0.11.0", default-features = false, features = ["prost"] }
tonic-build = { version = "0.11.0", default-features = false, features = ["prost"] }
tokio = { version = "1.32.0", default-features = false, features = ["signal", "macros", "rt-multi-thread", "rt"] }
tokio-stream = { version = "0.1.15", default-features = false, features = ["sync"] }
tracing = { version = "0.1.41", default-features = false }
tracing-attributes = { version = "0.1.28", default-features = false }
url = { version = "2.5.0", default-features = false }
warp_lambda = { version = "0.1.4", default-features = false }
wsts = { version = "9.2.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
libp2p = { version = "0.54.1", default-features = false, features = [
    "macros", "kad", "noise", "ping", "tcp", "tokio", "yamux", "mdns", "quic", 
    "gossipsub", "identify", "tls", "dns", "autonat", "secp256k1"
] }
fake = { version = "2.9.2", default-features = false, features = ["derive", "time"] }

[workspace.dependencies.axum]
version = "0.7.9"
default-features = false
features = ["http1", "json", "tracing", "tokio", "tower-log"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["env-filter", "fmt", "json", "time", "ansi"]
