[workspace]
resolver = "2"
members = [
    ".generated-sources/blocklist-api",
    ".generated-sources/emily/client/rust/private",
    ".generated-sources/emily/client/rust/public",
    ".generated-sources/emily/client/rust/testing",
    "blocklist-client",
    "blocklist-openapi-gen",
    "emily/handler",
    "emily/openapi-gen",
    "sbtc",
    "signer",
]

[workspace.dependencies]
# Local Dependencies
sbtc = { path = "./sbtc" }
emily-handler = { path = "./emily/handler" }
emily-client = { path = "./.generated-sources/emily/client/rust/public" }
testing-emily-client = { path = "./.generated-sources/emily/client/rust/testing" }
blocklist-api = { path = "./.generated-sources/blocklist-api" }
blocklist-client = { path = "./blocklist-client" }

# Stacks-Core Dependencies
clarity = { git = "https://github.com/stacks-network/stacks-core", rev = "49777d3fd73a6dbb610be80c376b7d9389c9871a", default-features = false, features = ["canonical"] }
stackslib = { git = "https://github.com/stacks-network/stacks-core", rev = "49777d3fd73a6dbb610be80c376b7d9389c9871a", default-features = false }
stacks-common = { git = "https://github.com/stacks-network/stacks-core", rev = "49777d3fd73a6dbb610be80c376b7d9389c9871a", default-features = false, features = ["canonical"] }

# Trust Machines Dependencies
wsts = { git = "https://github.com/Trust-Machines/wsts.git", rev = "53ae23f5f35def420877ccc8c0fe3662e64e38a1" }

# Crates.io
aquamarine = { version = "0.6.0", default-features = false }
aws-config = { version = "1.5.15", default-features = false, features = ["rustls", "rt-tokio"] }
aws_lambda_events = { version = "0.16.0", default-features = false }
aws-sdk-dynamodb = { version = "1.62.0", default-features = false }
backoff = { version = "0.4.0", default-features = false, features = ["tokio"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bincode = { version = "1.3.3", default-features = false }
bitcoin = { version = "0.32.5", default-features = false, features = ["serde", "rand-std"] }
bitcoincore-rpc = { version = "0.19.0", default-features = false }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }
bitcoincore-zmq = { version = "1.5.2", default-features = false, features = ["async"] }
bitvec = { version = "1.0.1", default-features = false, features = ["serde"] }
clap = { version = "4.5.27", default-features = false, features = ["derive", "env", "std"] }
config = { version = "0.14.1", default-features = false, features = ["toml"] }
futures = { version = "0.3.31", default-features = false }
hashbrown = { version = "0.14.5", default-features = false }
http = { version = "1.2.0", default-features = false }
lru = { version = "0.12.5", default-features = false }
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.1", default-features = false, features = ["http-listener"] }
openssl = { version = "0.10.68", default-features = false, features = ["vendored"] }
p256k1 = { version = "7.2.0", default-features = false }
prost = { version = "0.13.4", default-features = false, features = ["derive"] }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.11.27", default-features = false, features = ["json"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.15", default-features = false }
serde_dynamo = { version = "4.2.14", default-features = false, features = ["aws-sdk-dynamodb+1"] }
serde_json = { version = "1.0.137", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sqlx = { version = "0.8.3", default-features = false, features = [ "postgres", "runtime-tokio", "tls-rustls", "derive", "macros" ] }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.11", default-features = false }
time = { version = "0.3.37", default-features = false, features = ["serde"] }
tonic = { version = "0.12.3", default-features = false, features = ["prost"] }
tonic-build = { version = "0.12.3", default-features = false, features = ["prost"] }
tokio = { version = "1.43.0", default-features = false, features = ["signal", "macros", "rt-multi-thread", "rt"] }
tokio-stream = { version = "0.1.15", default-features = false, features = ["sync"] }
tracing = { version = "0.1.41", default-features = false }
url = { version = "2.5.4", default-features = false }
warp_lambda = { version = "0.1.4", default-features = false }
utoipa = { version = "4.2.3", default-features = false }
warp = { version = "0.3.7", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
libp2p = { version = "0.55.0", default-features = false, features = [
    "macros", "kad", "noise", "ping", "tcp", "tokio", "yamux", "mdns", "quic", 
    "gossipsub", "identify", "tls", "dns", "autonat", "secp256k1"
] }
cfg-if = { version = "1.0.0", default-features = false }
include_dir = { version = "0.7.4", default-features = false }
polynomial = { version = "0.2.6", default-features = false }
tower-http = { version = "0.6.2", default-features = false, features = ["trace", "request-id"] }
secp256k1 = { version = "0.29.0", default-features = false, features = ["std", "rand", "alloc", "serde", "global-context", "recovery"] }
axum = { version = "0.8.1", default-features = false, features = ["http1", "json", "tracing", "tokio", "tower-log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "json", "time", "ansi"] }

# Crates used only for testing
fake = { version = "3.1.0", default-features = false, features = ["derive", "time"] }
mockall = { version = "0.13.1", default-features = false }
mockito = { version = "1.6.1", default-features = false }
more-asserts = { version = "0.3.1", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
test-case = { version = "3.3.1", default-features = false }
test-log = { version = "0.2.17", default-features = false, features = ["trace"] }
toml_edit = { version = "0.22.22", default-features = false, features = ["display"] }
tempfile = { version = "3.15.0", default-features = false }
tower = { version = "0.5.2", default-features = false, features = ["util"] }

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = false
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 16
overflow-checks = true
