[package]
name = "blocklist-client"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "blocklist-client"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros"] }
tracing.workspace = true
tracing-attributes.workspace = true
tracing-subscriber.workspace = true
utoipa = "4.2.3"
warp = "0.3"

[dev-dependencies]
mockito = "0.28"
