[package]
name = "blocklist-client"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
config.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
warp.workspace = true

[dev-dependencies]
mockito.workspace = true

[[bin]]
name = "blocklist-client"
path = "src/main.rs"
