[package]
name = "blocklist-openapi-gen"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["utoipa", "blocklist-client"]

[dependencies]
blocklist-client.workspace = true
utoipa.workspace = true

[build-dependencies]
blocklist-client.workspace = true
utoipa.workspace = true
