[package]
name = "sbtc-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true
tracing-subscriber.workspace = true

[dependencies.secp256k1]
version = "*"
features = ["rand-std", "global-context"]
