[package]
name = "sbtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["testing"]
integration-tests = ["testing"]
testing = []

[dependencies]
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoincore-rpc.workspace = true
bitcoincore-rpc-json.workspace = true
clarity.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
stacks-common.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dependencies.secp256k1]
version = "0.29.0"
features = ["rand-std", "global-context"]

[dev-dependencies]
test-case = "3.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }