# The razor application, for fundraising.
[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[features]
default = ["testing"]
integration-tests = ["testing"]
testing = ["fake", "mockall", "sbtc/testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine.workspace = true
axum.workspace = true
backoff.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoincore-rpc.workspace = true
bitcoincore-rpc-json.workspace = true
bitvec = { workspace = true, default-features = false, features = ["std"] }
blocklist-api = { path = "../.generated-sources/blocklist-api" }
emily-client.workspace = true
clap.workspace = true
clarity.workspace = true
config = "0.14"
futures.workspace = true
hashbrown.workspace = true
libp2p.workspace = true
lru = { workspace = true, default-features = false }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
p256k1.workspace = true
prost.workspace = true
rand.workspace = true
reqwest.workspace = true
sbtc = { path = "../sbtc", features = ["webhooks"] }
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
stackslib.workspace = true
stacks-common.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tonic.workspace = true
tokio = { workspace = true, features = ["signal", "macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true
tracing-subscriber = { workspace = true }
url.workspace = true
# wsts.workspace = true
wsts = { git = "https://github.com/Trust-Machines/wsts.git", rev = "b7c009e4903bcf03351847a9341c25a26d36c042" }
hex.workspace = true
cfg-if = "1.0"
include_dir = "0.7.4"
polynomial = "0.2.6"
bitcoincore-zmq = { version = "1.5.2", features = ["async"] }

# Only used to setup logging for the signer's axum http server
tower-http = { version = "0.6.2", features = ["trace", "request-id"] }

# Only for testing
mockall = { version = "0.12.1", optional = true }
fake = { version = "2.9.2", features = ["derive", "time"], optional = true }

[dependencies.secp256k1]
version = "*"
features = ["rand-std", "global-context"]

[dev-dependencies]
bitcoincore-rpc.workspace = true
mockito = "1.4.0"
more-asserts = "0.3"
ripemd = "0.1.3"
sbtc = { path = "../sbtc", default-features = false, features = ["testing"] }
test-case = "3.1"
test-log = { version = "0.2.16", default-features = false, features = ["trace"] }
toml_edit = "0.22.22"
tempfile = "3.6"
tower = { version = "0.5.2", features = ["util"] }

[build-dependencies]
tonic-build.workspace = true

[[bin]]
name = "demo-cli"
path = "src/bin/demo_cli.rs"
