[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo-cli"
path = "src/bin/demo_cli.rs"

[features]
default = ["testing"]
testing = ["fake", "mockall", "sbtc/testing"]

[dependencies]
wsts.workspace = true
sbtc = { workspace = true, features = ["webhooks"] }
blocklist-api.workspace = true
aquamarine.workspace = true
axum.workspace = true
backoff.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
bitcoincore-rpc-json.workspace = true
bitvec.workspace = true
emily-client.workspace = true
clap.workspace = true
clarity.workspace = true
config.workspace = true
futures.workspace = true
hashbrown.workspace = true
libp2p.workspace = true
lru.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
p256k1.workspace = true
prost.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
stackslib.workspace = true
stacks-common.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
hex.workspace = true
cfg-if.workspace = true
include_dir.workspace = true
polynomial.workspace = true
bitcoincore-zmq.workspace = true
secp256k1.workspace = true
tower-http.workspace = true

# Only for testing
mockall = { workspace = true, optional = true }
fake = { workspace = true, optional = true }

[dev-dependencies]
sbtc = { workspace = true, features = ["testing"] }
bitcoincore-rpc.workspace = true
mockito.workspace = true
more-asserts.workspace = true
ripemd.workspace = true
test-case.workspace = true
test-log.workspace = true
toml_edit.workspace = true
tempfile.workspace = true
tower.workspace = true

[build-dependencies]
tonic-build.workspace = true