[package]
name = "emily-client-tests"
version = "0.1.0"
edition = "2021"

[features]
integration-tests = []

[dependencies]
emily-client.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
base64.workspace = true
config.workspace = true
clap.workspace = true
openssl.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_dynamo.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros"] }
tracing.workspace = true
tracing-attributes.workspace = true
tracing-subscriber.workspace = true
utoipa = "4.2.3"
warp = "0.3"
warp_lambda.workspace = true

[dev-dependencies]
rand = "0.8"
mockito = "0.28"
mockall = "0.10"
test-case = "3.1"
