[package]
name = "emily-handler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emily-lambda"

[[bin]]
name = "emily-server"

[features]
default = ["testing"]
testing = []
populate = ["testing"]

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
base64.workspace = true
bitcoin.workspace = true
config.workspace = true
clap.workspace = true
hex.workspace = true
reqwest.workspace = true
sbtc.workspace = true
serde.workspace = true
serde_dynamo.workspace = true
serde_json.workspace = true
stacks-common.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
warp.workspace = true
warp_lambda.workspace = true

[dev-dependencies]
testing-emily-client.workspace = true
sbtc = { workspace = true, features = ["testing"] }
test-case.workspace = true

[package.metadata.cargo-machete]
ignored = []