[package]
name = "emily-operation-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
aws_lambda_events.workspace = true
http.workspace = true
aws-sdk-dynamodb.workspace = true
emily.workspace = true
openssl.workspace = true

[dev-dependencies]
more-asserts = "0.3"
test-case = "3.1"
