[package]
name = "emily-openapi-spec"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["emily-handler", "utoipa", "serde_json"]

[dependencies]
emily-handler.workspace = true
serde_json.workspace = true
utoipa.workspace = true

[build-dependencies]
emily-handler.workspace = true
serde_json.workspace = true
utoipa.workspace = true
